--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tinacms dev -c \"hugo server -D -p 1313\"",
+    "build": "tinacms build && hugo"
   },
   "keywords": [],
   "author": "",
